// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render with best values hidden 1`] = `
<div>
  <ComponentsList
    components={
      [
        {
          "key": "foo",
          "measures": [],
          "name": "Foo",
          "qualifier": "TRK",
        },
      ]
    }
    metric={
      {
        "id": "1",
        "key": "coverage",
        "name": "Coverage",
        "type": "PERCENT",
      }
    }
    metrics={
      {
        "coverage": {
          "id": "1",
          "key": "coverage",
          "name": "Coverage",
          "type": "PERCENT",
        },
      }
    }
    rootComponent={
      {
        "key": "parent",
        "measures": [],
        "name": "Parent",
        "qualifier": "TRK",
      }
    }
    view="tree"
  />
  <Alert
    className="spacer-top"
    variant="info"
  >
    <div
      className="display-flex-center"
    >
      component_measures.hidden_best_score_metrics.9.
      <Button
        className="button-small spacer-left"
        onClick={[Function]}
      >
        show_them
      </Button>
    </div>
  </Alert>
</div>
`;

exports[`should renders correctly 1`] = `
<div>
  <ComponentsList
    components={
      [
        {
          "key": "foo",
          "measures": [],
          "name": "Foo",
          "qualifier": "TRK",
        },
      ]
    }
    metric={
      {
        "id": "1",
        "key": "coverage",
        "name": "Coverage",
        "type": "PERCENT",
      }
    }
    metrics={
      {
        "coverage": {
          "id": "1",
          "key": "coverage",
          "name": "Coverage",
          "type": "PERCENT",
        },
      }
    }
    rootComponent={
      {
        "key": "parent",
        "measures": [],
        "name": "Parent",
        "qualifier": "TRK",
      }
    }
    view="tree"
  />
  <ListFooter
    count={1}
    loadMore={[MockFunction]}
    loading={false}
    total={10}
  />
</div>
`;
